Fix header z-index

--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ body {
 
 header {
     position: fixed;
-    z-index: 1;
+    z-index: 10;
     width: 100%;
     height: 50px;
     background-color: var(--black-color);
